updated banner animation to prevent jumpback at the end

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -59,7 +59,7 @@
     background-image: url(../../assets/banner-killua.jpg);
   }
   100% {
-    background-image: url(../../assets/banner-demonslayer.jpg);
+    background-image: url(../../assets/banner-goku.jpg);
   }
 }
 
